--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,1 +1,20 @@
-Welcome!
+<!doctype html>
+<html class='no-js' lang='zh-CN'>
+<head>
+  <meta charset='utf-8'>
+  <title>同道 - 专业的大学生能力社交平台</title>
+  <script src="//cdn.staticfile.org/modernizr/2.6.2/modernizr.min.js"></script>
+</head>  
+<body>
+
+<div id='test'>
+  <span id='project_count'></span>
+</div>
+
+<script src="//cdn.staticfile.org/socket.io/0.9.16/socket.io.min.js"></script>
+<script src="/scripts/provider.js"></script>
+<script src="//cdn.staticfile.org/react/0.5.1/react.min.js"></script>
+<script src="//cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+<script src="/scripts/ui.js"></script>
+</body>
+</html>
