--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,17 +1,13 @@
 <!doctype html>
-<html class='no-js' lang='zh-CN'>
+<html lang='zh-CN'>
 <head>
   <meta charset='utf-8'>
   <title>同道 - 专业的大学生项目社交平台</title>
-  <script src="//cdn.staticfile.org/modernizr/2.6.2/modernizr.min.js"></script>
 </head>  
 <body>
 
-<div id='test'>
-  <span id='project_count'></span>
-</div>
+<div>同道上共有<span id="projects_counter"></span>个项目</div>
 
-<script src="//cdn.staticfile.org/socket.io/0.9.16/socket.io.min.js"></script>
-<script src="//cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+<script data-main="scripts/pages/welcome.js" src="scripts/components/requirejs/require.js"></script>
 </body>
 </html>
