--- a/views/welcome.html
+++ b/views/welcome.html
@@ -6,7 +6,8 @@
 </head>  
 <body>
 
-<div>同道上共有<span id="projects_counter"></span>个项目</div>
+<div>已经有<%= count_of_projects.count %>个项目在同道网</div>
+<div>已经有<%= count_of_users.count %>个同道中人在等你前来</div>
 
 <script data-main="scripts/pages/welcome.js" src="scripts/components/requirejs/require.js"></script>
 </body>
