--- a/views/welcome.html
+++ b/views/welcome.html
@@ -2,6 +2,9 @@
 <html lang='zh-CN'>
 <head>
   <meta charset='utf-8'>
+
+  <link rel="shortcut icon" href="/favicon.ico">
+
   <title>同道 - 专业的大学生项目社交平台</title>
 </head>  
 <body>
