--- a/views/welcome.html
+++ b/views/welcome.html
@@ -3,13 +3,46 @@
 <head>
   <meta charset='utf-8'>
 
+  <link rel="stylesheet" href="stylesheets/uikit.min.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
+
+  <script src="//cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+
   <title>同道 - 专业的大学生项目社交平台</title>
 </head>  
 <body>
 
-<div>已经有<%= count_of_projects.count %>个项目在同道网</div>
-<div>已经有<%= count_of_users.count %>个同道中人在等你前来</div>
+<header>
+<div class="uk-width-6-10 uk-container-center">
+  <img id="logo" src="images/tongdao.png" alt="">
+</div>
+</header>
 
+<div class="uk-container uk-container-center">
+  <article class="uk-grid" id="intro" data-uk-grid-margin>
+    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
+      <div class="uk-panel">
+        <h3 class="uk-panel-title">轻松寻找</h3>
+        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
+      </div>
+    </section>
+    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
+      <div class="uk-panel">
+        <h3 class="uk-panel-title">轻松寻找</h3>
+        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
+      </div>
+    </section>
+    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
+      <div class="uk-panel">
+        <h3 class="uk-panel-title">轻松寻找</h3>
+        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
+      </div>
+    </section>
+  </article>
+</div>
+
+<script src="//cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
+<script src="scripts/lib/uikit.min.js"></script>
 <script data-main="scripts/pages/welcome.js" src="scripts/components/requirejs/require.js"></script>
 </body>
 </html>
