--- a/views/welcome.html
+++ b/views/welcome.html
@@ -2,6 +2,7 @@
 <html lang='zh-CN'>
 <head>
   <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="stylesheet" href="stylesheets/uikit.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
