--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,9 +1,12 @@
+@import 'mixin.less';
+
 header {
   position: relative;
 
   padding: 10px 0px;
 
   background-color: whitesmoke;
+  .drop-shadow;
 
   span {
     float: right;
