--- a/views/welcome.html
+++ b/views/welcome.html
@@ -14,7 +14,7 @@
 <body>
 
 <header>
-<div class="uk-width-6-10 uk-container-center">
+<div class="uk-container uk-container-center">
   <img id="logo" src="images/tongdao.png" alt="">
 </div>
 </header>
