--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-header{position:relative;padding:10px 0;background-color:whitesmoke}header span{float:right;vertical-align:middle;height:50px;line-height:50px}header span *{margin:0 10px}#intro{padding:24px 0}
+header{position:relative;padding:10px 0;background-color:whitesmoke;-webkit-box-shadow:0 1px 2px 0 rgba(0,0,0,0.25);-moz-box-shadow:0 1px 2px 0 rgba(0,0,0,0.25);box-shadow:0 1px 2px 0 rgba(0,0,0,0.25)}header span{float:right;vertical-align:middle;height:50px;line-height:50px}header span *{margin:0 10px}#intro{padding:24px 0}
