--- a/views/welcome.html
+++ b/views/welcome.html
@@ -11,7 +11,7 @@
 
   <title>同道 - 专业的大学生项目社交平台</title>
 </head>  
-<body>
+<body class="welcome">
 
 <header>
 <div class="uk-container uk-container-center">
@@ -41,6 +41,15 @@
     </section>
   </article>
 </div>
+
+<footer>
+  <form action="" class="uk-form">
+    <input type="text" class="uk-form-large uk-form-width-large" id="email">
+  </form>
+  <div class="uk-text-small uk-text-muted">
+    <p>&copy;2013 同道网，沪ICP备13041259号</p>
+  </div> <!-- copyright && icp information -->
+</footer>
 
 <script src="//cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
 <script src="scripts/lib/uikit.min.js"></script>
