--- a/views/welcome.html
+++ b/views/welcome.html
@@ -19,40 +19,24 @@
 </div>
 </header>
 
-<div class="uk-container uk-container-center">
-  <article class="uk-grid" id="intro" data-uk-grid-margin>
-    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
-      <div class="uk-panel">
-        <h3 class="uk-panel-title">轻松寻找</h3>
-        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
-      </div>
-    </section>
-    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
-      <div class="uk-panel">
-        <h3 class="uk-panel-title">轻松寻找</h3>
-        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
-      </div>
-    </section>
-    <section class="uk-width-1-1 uk-width-medium-1-3 uk-panel-header">
-      <div class="uk-panel">
-        <h3 class="uk-panel-title">轻松寻找</h3>
-        <p>太阳当空照花儿对我笑，小鸟说早早早，你为什么背上小书包。我要上学校，天天不迟到，爱学习爱劳动，长大要为人民立功劳。</p>
-      </div>
-    </section>
-  </article>
-</div>
+
 
 <footer>
-  <form action="" class="uk-form">
-    <input type="text" class="uk-form-large uk-form-width-large" id="email">
-  </form>
-  <div class="uk-text-small uk-text-muted">
-    <p>&copy;2013 同道网，沪ICP备13041259号</p>
+  <div class="uk-width-medium-4-10 uk-push-3-10">
+    <form action="#" class="uk-form">
+      <input type="text" class="uk-form-large" id="email" name="email" placeholder="输入你的邮箱，开启同道之旅吧！">
+      <button class="uk-icon-button uk-icon-ok"></button>
+    </form>
+  </div> <!-- form wrapper -->
+
+  <div>
+    <p class="uk-text-muted uk-text-small">&copy;2013 同道网，沪ICP备13041259号</p>
   </div> <!-- copyright && icp information -->
 </footer>
 
 <script src="//cdn.staticfile.org/jquery/2.0.3/jquery.min.js"></script>
 <script src="scripts/lib/uikit.min.js"></script>
+<script src="scripts/components/jquery-placeholder/jquery.placeholder.min.js"></script>
 <script data-main="scripts/pages/welcome.js" src="scripts/components/requirejs/require.js"></script>
 </body>
 </html>
