--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2,12 +2,13 @@
 
 @theme_color: #4E86BE;
 
+/* Styles for welcome page */
 .welcome {
-
   header {
     position: relative;
 
     padding: 10px 0px;
+    margin-bottom: 30px;
 
     background-color: whitesmoke;
     .drop-shadow;
@@ -25,9 +26,6 @@
     }
   }
 
-  #intro {
-    padding: 24px 0px;
-  }
 
   footer {
     position: fixed;
@@ -65,4 +63,5 @@
     }
   }
 
-}
+
+} // Welcome page style
