--- a/views/welcome.html
+++ b/views/welcome.html
@@ -16,9 +16,14 @@
 <header>
 <div class="uk-container uk-container-center">
   <img id="logo" src="images/tongdao.png" alt="">
+  <span><a href="#">已注册用户登陆</a></span>
 </div>
 </header>
 
+
+<article class="uk-container uk-container-center intro">
+
+</article>
 
 
 <footer>
