--- a/views/welcome.html
+++ b/views/welcome.html
@@ -21,8 +21,19 @@
 </header>
 
 
-<article class="uk-container uk-container-center intro">
-
+<article class="intro">
+  <section class="banner-1">
+    <div><span class="banner"></span></div>
+    <p>找到最神的队友，一起完成富有挑战的项目</p>
+  </section>
+  <section class="banner-2">
+    <div><span class="banner"></span></div>
+    <p>和所有同道中人一同思考，为你的项目出谋划策</p>
+  </section>
+  <section class="banner-3">
+    <div><span class="banner"></span></div>
+    <p>参加缤纷校园学生项目比赛，提升自我，通向未来</p>
+  </section>
 </article>
 
 
@@ -35,7 +46,7 @@
   </div> <!-- form wrapper -->
 
   <div>
-    <p class="uk-text-muted uk-text-small">&copy;2013 同道网，沪ICP备13041259号</p>
+    <p class="uk-text-muted uk-text-small">&copy;2013-2014 同道网，沪ICP备13041259号</p>
   </div> <!-- copyright && icp information -->
 </footer>
 
