--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -71,7 +71,7 @@
       display: inline-block;
 
       height: 300px;
-      width: 400px;
+      width: 350px;
 
       background: url(../images/banners/banner.png) no-repeat top left;
     }
@@ -82,7 +82,7 @@
 
       p {
         // reset
-        margin-bottom: 0;
+        margin: 0;
 
         position: relative;
         top: -30px;
