--- a/views/welcome.html
+++ b/views/welcome.html
@@ -24,19 +24,25 @@
 <article class="intro">
   <section class="banner-1">
     <div><span class="banner"></span></div>
-    <p>找到最神的队友，一起完成富有挑战的项目</p>
-    <p>已有<%= count_of_projects.count %>个项目在同道上萌芽</p>
+    <div class="uk-container uk-container-center">
+     <p>找到最神的队友，一起完成富有挑战的项目</p>
+      <p>已有<%= count_of_projects.count %>个项目在同道上萌芽</p>     
+    </div>
   </section>
   <section class="banner-2">
     <div><span class="banner"></span></div>
-    <p>和所有同道中人一同思考，为你的项目出谋划策</p>
-    <p>已有<%= count_of_users.count %>个同道中人在同道上等你</p>
+    <div class="uk-container uk-container-center">
+      <p>和所有同道中人一同思考，为你的项目出谋划策</p>
+      <p>已有<%= count_of_users.count %>个同道中人在同道上等你</p>
+    </div>
   </section>
   <section class="banner-3">
     <div><span class="banner"></span></div>
-    <p>参加缤纷校园学生项目比赛，提升自我，通向未来</p>
-    <p>我们是专业的大学生项目社交平台！</p>
-    <p>想加入同道？非常简单！</p>
+    <div class="uk-container uk-container-center">
+      <p>参加缤纷校园学生项目比赛，提升自我，通向未来</p>
+      <p>我们是专业的大学生项目社交平台！</p>
+      <p>想加入同道？非常简单！</p>
+    <div class="uk-container uk-container-center">
   </section>
 </article>
 
