--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -68,9 +68,6 @@
     .banner {
       display: inline-block;
 
-      height: 300px;
-      width: 350px;
-
       background: url(../images/banners/banner.png) no-repeat top left;
     }
 
@@ -94,14 +91,14 @@
     .banner-1 {
       background-color: #35485D;
       .banner {
-        background-position: 0 -50px; width: 400px; height: 300px;
+        background-position: -10px -50px; width: 380px; height: 300px;
       }
     }
 
     .banner-2 {
       background-color: #9ACA40;
       .banner {
-        background-position: 0 -500px; width: 400px; height: 300px;
+        background-position: -10px -500px; width: 380px; height: 300px;
       }
     }
 
@@ -111,7 +108,7 @@
 
       background-color: #5187BC;
       .banner {
-        background-position: 0 -950px; width: 400px; height: 300px;
+        background-position: -10px -950px; width: 380px; height: 300px;
       }
     }
     
