--- a/views/welcome.html
+++ b/views/welcome.html
@@ -24,11 +24,13 @@
 <article class="intro">
   <section class="banner-1">
     <div class="uk-container uk-container-center">
-      <div><span class="banner"></span></div>
-      <div>
-        <p>找到最神的队友，一起完成富有挑战的项目</p>
-        <p>已有<%= count_of_projects.count %>个项目在同道上萌芽</p>     
-      </div>     
+      <div class="uk-grid">
+        <div class="uk-width-1-1"><span class="banner"></span></div>
+        <div class="uk-width-1-1">
+          <p>找到最神的队友，一起完成富有挑战的项目</p>
+          <p>已有<%= count_of_projects.count %>个项目在同道上萌芽</p>     
+        </div>          
+      </div>   
     </div>
   </section>
   <section class="banner-2">
