--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -91,14 +91,14 @@
     .banner-1 {
       background-color: #35485D;
       .banner {
-        background-position: -20px -50px; width: 360px; height: 300px;
+        background-position: -20px -50px; width: 100%; max-width: 360px; height: 300px;
       }
     }
 
     .banner-2 {
       background-color: #9ACA40;
       .banner {
-        background-position: -20px -500px; width: 360px; height: 300px;
+        background-position: -20px -500px; width: 100%; max-width: 360px; height: 300px;
       }
     }
 
@@ -108,7 +108,7 @@
 
       background-color: #5187BC;
       .banner {
-        background-position: -20px -950px; width: 360px; height: 300px;
+        background-position: -20px -950px; width: 100%; max-width: 360px; height: 300px;
       }
     }
     
