--- a/views/welcome.html
+++ b/views/welcome.html
@@ -16,7 +16,7 @@
 <header>
 <div class="uk-container uk-container-center">
   <img id="logo" src="images/tongdao.png" alt="">
-  <span><a href="#">已注册用户登陆</a></span>
+  <span><a href="#">用户登陆</a></span>
 </div>
 </header>
 
