--- a/views/index.html
+++ b/views/index.html
@@ -71,7 +71,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-md-push-8 hidden-xs hidden-sm">
-              <div id="myCarousel row" class="carousel slide" data-interval="false">
+              <div id="myCarousel" class="carousel slide" data-interval="false">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                   <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
