--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
   <!-- Loading Page UI -->
   <link href="stylesheets/demo.css" rel="stylesheet">
 
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
