--- a/views/index.html
+++ b/views/index.html
@@ -107,20 +107,20 @@
                   <ul class="nav nav-list">
                     <li class="nav-header">推荐活动</li>
                     <li class="divider"></li>
-                    <li><a href="#">Android程序设计大赛</a></li>
-                    <li><a href="#">贝恩杯咨询启航大赛</a></li>
-                    <li><a href="#">麦当劳比谁吃得多大赛</a></li>
+                    <li><a href="#">Android程序设计大赛<span class="badge pull-right">1203参赛</span></a></li>
+                    <li><a href="#">贝恩杯咨询启航大赛<span class="badge pull-right">1503参赛</span></a></li>
+                    <li><a href="#">麦当劳比谁吃得多大赛<span class="badge pull-right">3803参赛</span></a></li>
                     <li class="nav-header">热门项目</li>
                     <li class="divider"></li>
-                    <li><a href="#">同道网</a></li>
-                    <li><a href="#">超级水晶杯</a></li>
-                    <li><a href="#">WeCampus</a></li>
+                    <li><a href="#">同道网<span class="badge pull-right">69赞</span></a></li>
+                    <li><a href="#">超级水晶杯<span class="badge pull-right">27赞</span></a></li>
+                    <li><a href="#">WeCampus<span class="badge pull-right">69赞</span></a></li>
                     <li class="nav-header">我参加讨论的项目</li>
                     <li class="divider"></li>
-                    <li><a href="#">同济大学有节操</a></li>
-                    <li><a href="#">复旦大学掉节操</a></li>
-                    <li><a href="#">清华大学是节操</a></li>
-                    <li><a href="#">上海交通哈哈哈</a></li>
+                    <li><a href="#">同济大学有节操<span class="badge pull-right">42赞</span></a></li>
+                    <li><a href="#">复旦大学掉节操<span class="badge pull-right">55赞</span></a></li>
+                    <li><a href="#">清华大学是节操<span class="badge pull-right">99赞</span></a></li>
+                    <li><a href="#">上海交通哈哈哈<span class="badge pull-right">172赞</span></a></li>
                   </ul> 
                 </div>
               </div> <!-- side nav -->
