--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse-01"></button>
-            <a href="#" class="navbar-brand fui-flat"></a>
+            <a href="#" class="navbar-brand"><img src="images/tongdao-white.png" alt=""></a>
           </div>  
 
           <div class="navbar-collapse collapse navbar-collapse-01">
