--- a/public/less/demo.less
+++ b/public/less/demo.less
@@ -37,3 +37,12 @@ footer {
 .nav-header {
   margin-top: 24px;
 }
+
+.navbar-inverse .navbar-brand {
+  padding: 0 36px 0 12px;
+  margin-top: 6px;
+
+  img {
+    height: 40px;
+  }
+}
