--- a/public/less/demo.less
+++ b/public/less/demo.less
@@ -41,8 +41,8 @@ footer {
 .navbar-inverse .navbar-brand {
   padding: 0 36px 0 12px;
   margin-top: 6px;
+}
 
-  img {
-    height: 40px;
-  }
+.logo {
+  height: 40px;
 }
