--- a/public/less/flat-ui.less
+++ b/public/less/flat-ui.less
@@ -47,6 +47,11 @@
 @import "modules/modals";
 @import "modules/switch";
 @import "modules/carousel";
+@import "modules/public-activity";
 
 // Spaces
 @import "spaces";
+
+// Custom 
+@import "pages/welcome";
+@import "pages/common";
