--- a/public/less/pages/common.less
+++ b/public/less/pages/common.less
@@ -1,4 +1,5 @@
 .ns-common {
+  // global footer 
   footer {
     margin-top: 18px;
     
@@ -9,6 +10,7 @@
     }
   }
 
+  // global header 
   .navbar-inverse .navbar-brand {
     padding: 0 36px 0 12px !important;
     margin-top: 6px;
@@ -21,4 +23,8 @@
   .nav-header {
     margin-top: 24px;
   } 
+
+  .small-text {
+    font-size: @font-size-small;
+  }
 }
