--- a/public/less/flat-ui.less
+++ b/public/less/flat-ui.less
@@ -48,6 +48,7 @@
 @import "modules/switch";
 @import "modules/carousel";
 @import "modules/public-activity";
+@import "modules/panel";
 
 // Spaces
 @import "spaces";
