--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -83,6 +83,7 @@
 @font-family-demo:			"Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-monospace: Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-size-base:    		18px;
+@font-size-small:       14px;
 
 @font-size-h1:          floor(@font-size-base * 3.444); // ~62px
 @font-size-h2:          ceil(@font-size-base * 2.889); // ~52px
