--- a/views/welcome.html
+++ b/views/welcome.html
@@ -9,20 +9,20 @@
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
   
 
-  <!-- Loading Flat UI -->
-  <link href="stylesheets/flat-ui.css" rel="stylesheet">
+  <!-- Loading TongDao UI -->
+  <link href="stylesheets/tongdao.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="favicon.ico">
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
   <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 </head>
-<body class="ns-welcome">
+<body class="ns-welcome ns-common">
 
 <header>
 <div class="container">
   <img id="logo" src="images/tongdao.png" alt="">
-  <span><a href="#">用户登陆</a></span>
+  <span><a href="sign_in">用户登陆</a></span>
 </div>
 </header>
 
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="col-md-6 col-md-push-3">
       <form action="#" method="POST">
-        <input type="text" placeholder="输入你的邮箱，开启同道之旅吧！" class="form-control input-hg" id="email" name="email">
+        <input type="text" placeholder="输入你的邮箱，开启同道之旅吧！" class="form-control input-md" id="email" name="email">
         <button class="fui-check"></button>
       </form>
     </div> <!-- form wrapper -->
@@ -77,7 +77,7 @@
 
 
   <div class="row">
-    <p>&copy;2013-2014 同道网，沪ICP备13041259号</p>
+    <p class="small-text">&copy;2013-2014 同道网，沪ICP备13041259号</p>
   </div> <!-- copyright && icp information -->
 </footer>
 
