Thanks, Object.bind

--- a/public/less/pages/welcome.less
+++ b/public/less/pages/welcome.less
@@ -50,11 +50,12 @@
         background: none;
         border: none;
         outline: none;
+        color: white;
 
         position: absolute;
 
         right: 12px;
-        top: 4px;
+        top: -2px;
 
         font-size: 24px;
       }
