--- a/public/less/icon-font.less
+++ b/public/less/icon-font.less
@@ -35,7 +35,7 @@ you can use the generic selector below, but it's slower:
   -webkit-font-smoothing: antialiased;
   padding-right: 4px; 
 
-  &.clear-pr {
+  &.clear-pr { // 不需要右边内边距
     padding-right: 0px;
   }
 }
