--- a/public/less/pages/common.less
+++ b/public/less/pages/common.less
@@ -27,4 +27,8 @@
   .small-text {
     font-size: @font-size-small;
   }
+
+  input, textarea {
+    .placeholder(mix(@brand-primary, white, 45%));
+  }
 }
