--- a/views/partials/fw_footer.html
+++ b/views/partials/fw_footer.html
@@ -40,5 +40,8 @@
   <script src="scripts/flatui-radio.js"></script>
   <script src="scripts/jquery.tagsinput.js"></script>
   <script src="scripts/jquery.placeholder.js"></script>
+  <script>
+  $('input, textarea').placeholder();
+  </script>
 </body>
 </html>
