--- a/views/users/public_activities.html
+++ b/views/users/public_activities.html
@@ -1,4 +1,4 @@
-<%- include partials/fw_header.html %>
+<%- include ../partials/fw_header.html %>
 
 <div class="container">
   <div class="row">
@@ -112,4 +112,4 @@
     </div> <!-- public activities pagination -->
   </div> <!-- public activities -->
 </div>
-<%- include partials/fw_footer.html %>
+<%- include ../partials/fw_footer.html %>
