--- a/views/welcome.html
+++ b/views/welcome.html
@@ -68,7 +68,7 @@
 <footer>
   <div class="row">
     <div class="col-md-6 col-md-push-3">
-      <form action="#" method="POST">
+      <form action="/pre_register_execute" method="POST">
         <input type="text" placeholder="输入你的邮箱，开启同道之旅吧！" class="form-control input-md" id="email" name="email">
         <button class="fui-check"></button>
       </form>
