--- a/views/partials/fw_header.html
+++ b/views/partials/fw_header.html
@@ -28,11 +28,11 @@
       <div class="navbar-collapse collapse navbar-collapse-01">
         <ul class="nav navbar-nav">
           <!-- Menu items go here -->
-          <li class="active">
-            <a href="#">首页</a>
-          </li>
           <li>
             <a href="#">广场</a>
+          </li>
+          <li>
+            <a href="/public_activities">好友动态</a>
           </li>
           <li>
             <a href="#">最新活动</a>
