--- a/views/users/forget_password.html
+++ b/views/users/forget_password.html
@@ -1,26 +1,24 @@
-<%- include partials/fw_header.html %>
+<%- include ../partials/fw_header.html %>
 <div class="container">
   <div class="row">
     <div class="panel giant col-md-8 col-md-push-2">
-        <div class="row title-bg"><span class="fui-user"></span></div>
+        <div class="row title-bg"><span class="fui-lock clear-pr"></span><span class="fui-question"></span></div>
         <div class="row">
           <form action="sign_in" class="col-md-8 col-md-push-2" method="POST">
             <div class="form-group input-group">
               <span class="input-group-addon">@&nbsp;</span>
               <input type="text" name="email" class="form-control" placeholder="您的email">
             </div>
-            
-            <div class="form-group input-group">
-              <span class="input-group-addon"><span class="fui-lock clear-pr"></span></span>
-              <input type="password" name="encrypted_password" class="form-control">
-            </div>
 
             <div class="form-group">
-              <button type="submit" class="btn btn-lg btn-block btn-info">确认</button>
+              <button type="submit" class="btn btn-lg btn-block btn-info">发送修改密码邮件</button>
+            </div>
+            <div class="form-group">
+              <a href="/sign_in" style="float:right">返回登陆界面</a>
             </div>
           </form>
         </div>
     </div>
   </div>
 </div>
-<%- include partials/fw_footer.html %>
+<%- include ../partials/fw_footer.html %>
